src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /* Firefox */
  html.dark {
    scrollbar-color: #404040 #262626;
  }

  /* Chrome, Safari */
  html.dark::-webkit-scrollbar {
    background: #262626;
  }

  html.dark::-webkit-scrollbar-track {
    background: #262626;
  }

  html.dark::-webkit-scrollbar-thumb {
    background-color: #404040;
  }
}

/* For Webkit-based browsers (Chrome, Safari and Opera) */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* For IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

